--- a/fluxmgr/templates/fluxmgr/install.html
+++ b/fluxmgr/templates/fluxmgr/install.html
@@ -1,51 +1,53 @@
-{% extends 'fluxmgr/base.html' %}
+{% extends 'base.html' %}
 
 {% load django_bootstrap5 %}
 
 {% block title %}
-Deploy
+Flux Install
 {% endblock %}
 
 {% block content %}
-
-<form id="deploy-flux-form">
+{% bootstrap_form_errors form %}
+<br>
+<form id="install-flux-form">
     {% csrf_token %}
 
     {% bootstrap_form form layout=layout size=size %}
 
-    {% bootstrap_button button_type="submit" content="Deploy" %}
-    {% bootstrap_button button_type="reset" content="Cancel" %}
+    {% bootstrap_button id="install" button_type="submit" content="Install" %}
 </form>
+<!-- Text area for displaying output -->
+<div class="mt-3">
+    <label for="output-textarea" class="form-label">Installation Output</label>
+    <textarea id="output-textarea" class="form-control" rows="10" readonly></textarea>
+</div>
 
+{% endblock %}
+
+{% block bootstrap_javascript %}
 <script>
     var loc = window.location;
     var wsStart = 'ws://';
     if (loc.protocol == 'https:') {
         wsStart = 'wss://'
     }
-    const deployFluxSocket = new WebSocket(
+    const installFluxSocket = new WebSocket(
         wsStart
         + window.location.host
-        + '/ws/fluxmgr/deploy-flux/'
+        + '/ws/fluxmgr/install-flux/'
     );
 
-    document.getElementById('deploy-flux-form').addEventListener('submit', async function (event) {
+    document.getElementById('install-flux-form').addEventListener('submit', async function (event) {
         event.preventDefault();
-        var clickedButton = document.activeElement; // Get the button that was clicked
-        alert("hello");
 
-        // var formData = document.getElementById('create-cluster-form');
-        // var clusterValue = formData.elements['cluster'].value;
-        // var tenantValue = formData.elements['tenant'].value;
-        // var mgmtClusterValue = formData.elements['mgmtCluster'].value;
-        // var stageValue = clickedButton.id
+        var formData = document.getElementById('install-flux-form');
+        var versionValue = formData.elements['version'].value;
+        var clusterValue = formData.elements['cluster'].value;
 
-        // createClusterSocket.send(JSON.stringify({
-        //     'stage': stageValue,
-        //     'cluster': clusterValue,
-        //     'tenant': tenantValue,
-        //     'mgmtCluster': mgmtClusterValue
-        // }))
+        installFluxSocket.send(JSON.stringify({
+            'version': versionValue,
+            'cluster': clusterValue
+        }))
     });
 
     // Define buffer variables
@@ -67,7 +69,7 @@ Deploy
     }
 
     // Event handler for incoming messages
-    deployFluxSocket.onmessage = function (e) {
+    installFluxSocket.onmessage = function (e) {
         // Add message to the buffer
         messageBuffer.push(e.data);
     };
@@ -78,8 +80,8 @@ Deploy
         }
     }, 1000); // Process buffer every second
 
-    deployFluxSocket.onclose = function (e) {
-        console.error('Deploy flux socket closed unexpectedly');
+    installFluxSocket.onclose = function (e) {
+        console.error('Install flux socket closed unexpectedly');
     };
 </script>
 {% endblock %}
