--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'flux_install' %}">Install</a></li>
+                            <li><a class="dropdown-item" href="{% url 'flux_delete' %}">Delete</a></li>
                         </ul>
                     </li>
                 </ul>
